test/files/neg/t5148.check
t5148.scala:4: error: missing or invalid dependency detected while loading class file 'Imports.class'.
Could not access term memberHandlers in class scala.tools.nsc.interpreter.IMain,
because it (or its dependencies) are missing. Check your build definition for
missing or conflicting dependencies. (Re-run with `-Ylog-classpath` to see the problematic classpath.)
A full rebuild may help if 'Imports.class' was compiled against an incompatible version of scala.tools.nsc.interpreter.IMain.
class IMain extends Imports
      ^
one error found
